# relationship-ontology

./: .env.example  .gitignore  CLAUDE.md  Makefile  get_gmail_tokens.py  personal_deal_flow_engine_prd_v2.md  pyproject.toml
.claude/agents/: coordinator.md  data-extraction-memory.md  delivery-reliability.md  product-systems-architect.md  recommendation-drafting.md
credentials/: google_oauth_template.jsonc
data/: deals_template.csv
db/: setup_dev_db.sql
db/migrations/: 001_create_companies.sql  002_create_persons.sql  003_create_deals.sql  004_create_interactions.sql  005_create_recommendations.sql  006_create_schema_versions.sql  007_add_deals_name_unique.sql
src/: config.py
src/db/: connection.py  runner.py
src/delivery/: pdf_renderer.py
src/delivery/templates/: daily_brief.html  print.css
src/extraction/: deal_discoverer.py  entity_resolver.py  extractor.py  prompts.py
src/ingestion/: calendar_connector.py  deal_loader.py  gmail_connector.py  google_auth.py  watermark.py
src/linking/: linker.py  matchers.py
src/llm/: client.py
src/recommendations/: context.py  generator.py  prompts.py
src/scoring/: components.py  features.py  scorer.py
tests/: test_calendar_connector.py  test_config.py  test_db_migrations.py  test_deal_discoverer.py  test_deal_lifecycle.py  test_deal_loader.py  test_entity_resolver.py  test_extractor.py  test_gmail_connector.py  test_linker.py  test_llm_client.py  test_pdf_renderer.py  test_recommendation_generator.py  test_recommendation_prompts.py  test_scoring_components.py  test_scoring_integration.py  test_watermark.py
